Mise à jour du site

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li ><a href="#expert">Expert</a> </li>
                         <li ><a href="#temoignage">Témoignages</a></li>
 
-                        <a href="#contact" class="btn-reserve">Reservation</a>
+                        <a href="#contact" class="btn-reserve">Commander</a>
                   </ul>
             </header>
             <section class="bannière" id="bannière">
@@ -36,7 +36,7 @@
                                  </p>
 
                         <a href="#menu" class="btn1"> Notre Menu </a>
-                        <a href="#contact" class="btn2">Réservation</a>
+                        <a href="#contact" class="btn2">Commander</a>
                   </div>
             </section>
             <section class="apropos" id="apropos">
