Ajout du fichier pour google search console

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </header>
             <section class="bannière" id="bannière">
                   <div class="contenu">
-                        <h2>Que Des Plats Délicieux</h2>
+                        <h2>Restaurant Le BON Coin</h2>
                         <p>Découvrez une explosion de saveurs authentiques et généreuses, 
                               inspirées des traditions culinaires africaines. Chez nous, 
                               chaque plat est préparé avec passion et des ingrédients soigneusement
