--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Restaurant Le Bon Coin à Parakou">
+      <link rel="canonical" href="https://restaurant-le-bon-coin.vercel.app/">
             <!-- Le titre de la page -->
       <title> Restaurant Le Bon Coin </title>
             <!-- L'icone de la page -->
